--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/alpinejs": "^0.2.2",
-    "@astrojs/image": "^0.17.2",
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/sitemap": "^2.0.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@fontsource/inter": "^5.0.5",
-    "@types/alpinejs": "^3.7.2",
-    "astro": "^2.9.7",
-    "astro-color-scheme": "^1.1.2",
+    "@astrojs/alpinejs": "^0.4.0",
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/mdx": "^3.1.5",
+    "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/inter": "^5.1.0",
+    "@iconify-json/heroicons-outline": "^1.2.0",
+    "@iconify-json/uil": "^1.2.0",
+    "@types/alpinejs": "^3.13.10",
+    "astro": "^4.15.4",
+    "astro-color-scheme": "^1.1.5",
     "astro-feather-icons": "^1.0.2",
-    "astro-icon": "^0.8.1",
-    "astro-seo": "^0.7.5",
+    "astro-icon": "^1.1.1",
+    "astro-seo": "^0.8.4",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "rehype-plugin-image-native-lazy-loading": "^1.2.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.9",
-    "classnames": "^2.3.2",
-    "sharp": "^0.32.6"
+    "@tailwindcss/typography": "^0.5.15",
+    "classnames": "^2.5.1",
+    "sharp": "^0.33.5"
   }
 }
