--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -54,7 +54,9 @@ collections:
 
   - name: "authors"
     label: "Authors"
-    folder: "src/data/authors.ts"
+    folder: "src/data"
+    extension: "json"
+    format: "json"
     create: true
     slug: "{{slug}}"
     fields:
@@ -65,7 +67,9 @@ collections:
 
   - name: "categories"
     label: "Categories"
-    folder: "src/data/category.ts"
+    folder: "src/data"
+    extension: "json"
+    format: "json"
     create: true
     slug: "{{slug}}"
     fields:
