Refactor admin configuration and add publish date format
- Refactor folder paths and add identifier fields in admin configuration
- Update publish date format in admin configuration to match ISO 8601 standard
- Add new script for preview template in admin index.html
- Create preview-template.js file for blog post preview component
- Import necessary components and utilities in preview-template.js
- Render blog post preview with Astro-like layout and components
- Register blog post preview template with DecapCMS

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -22,7 +22,12 @@ collections:
         }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Excerpt", name: "excerpt", widget: "string" }
-      - { label: "Publish Date", name: "publishDate", widget: "datetime" }
+      - {
+          label: "Publish Date",
+          name: "publishDate",
+          widget: "datetime",
+          format: "YYYY-MM-DDTHH:mm:ssZ",
+        }
       - { label: "Hero Image", name: "image", widget: "image" }
       - {
           label: "Category",
