Refactor admin configuration and update publish date format

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -26,7 +26,7 @@ collections:
           label: "Publish Date",
           name: "publishDate",
           widget: "datetime",
-          format: "YYYY-MM-DDTHH:mm:ssZ",
+          format: "'YYYY-MM-DDTHH:mm:ssZ'",
         }
       - { label: "Hero Image", name: "image", widget: "image" }
       - {
