--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
-    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/mdx": "^4.0.2",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/tailwind": "^5.1.3",
     "@fontsource/inter": "^5.1.0",
     "@iconify-json/heroicons-outline": "^1.2.0",
+    "@iconify-json/mdi": "^1.2.2",
     "@iconify-json/uil": "^1.2.1",
     "@types/alpinejs": "^3.13.11",
-    "astro": "^4.16.16",
+    "astro": "^5.0.9",
     "astro-color-scheme": "^1.1.5",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^1.1.4",
