--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/alpinejs": "^3.13.11",
     "astro": "^5.0.9",
     "astro-color-scheme": "^1.1.5",
+    "astro-favicons": "^3.1.3",
     "astro-feather-icons": "^1.0.2",
     "astro-icon": "^1.1.4",
     "astro-seo": "^0.8.4",
